- fix issue on mobile view not constant in mobile browser

--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,6 @@
 body {
   cursor: url('assets/cursor-assets/custom_pointer_default.svg'), default;
   background-color: var(--color-primary); 
-}
-
-.overflow-anchor-auto {
   overflow-anchor: auto;
 }
 
